--- a/Igraliste/src/components/WhyWeAreSpecial/WhyWeAreSpecial.css
+++ b/Igraliste/src/components/WhyWeAreSpecial/WhyWeAreSpecial.css
@@ -18,6 +18,7 @@
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.813); 
+  color:#f56565;
   opacity: 0; 
   transition: opacity 300ms ease-in-out; 
   z-index: 10; 
