--- a/Igraliste/src/components/4ImagesComponent/ImageGalerry.css
+++ b/Igraliste/src/components/4ImagesComponent/ImageGalerry.css
@@ -6,6 +6,7 @@
 
 .group {
   position: relative; 
+
 }
 
 .overlay {
@@ -13,25 +14,29 @@
   top: 0;
   left: 0;
   right: 0;
+  width: 100%;
+  height: 100%;
   bottom: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.813); 
-  color:#f56565;
+  color:#0e21a3;
   opacity: 0; 
   transition: opacity 300ms ease-in-out; 
+  justify-content: center;
+  align-items: center;
   z-index: 10; 
 }
 
 .group:hover .overlay {
   opacity: 1; 
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 
 .overlay-text {
   font-size: 1.25rem; 
   font-weight: 400; 
-  text-align: center;
+  text-align: start;
   padding: 0 1rem; 
 }
