--- a/Igraliste/src/components/ContactForm/ContactForm.css
+++ b/Igraliste/src/components/ContactForm/ContactForm.css
@@ -1,3 +1,3 @@
  input:active {
-    border-color: #f87171; /* Tailwind's red-500 color */
+    border-color:#1725a8; /* Tailwind's red-500 color */
   }
