--- a/Igraliste/src/components/SaidAboutUs/styles.css
+++ b/Igraliste/src/components/SaidAboutUs/styles.css
@@ -7,6 +7,7 @@ html,
 body {
   position: relative;
   height: 100%;
+
 }
 
 body {
@@ -28,18 +29,18 @@ body {
   font-size: 18px;
   background: #fff;
 
-  /* Center slide text vertically */
+  
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.swiper-slide img {
+/* .swiper-slide img {
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
+} */
 
 .swiper-pagination-bullet {
   width: 20px;
